[gd_scene load_steps=43 format=3 uid="uid://fe1jdadi4qdh"]

[ext_resource type="Texture2D" uid="uid://buplprrgex87p" path="res://Assets/StartingStuff/Starting_Scene.png" id="1_6p1lm"]
[ext_resource type="Script" path="res://Scenes/title_screen.gd" id="1_o31ak"]
[ext_resource type="Texture2D" uid="uid://bgxj2ldw7pksi" path="res://Assets/StartingStuff/Booting_Screen.png" id="2_4hnip"]
[ext_resource type="Texture2D" uid="uid://bp32fh43dnaaq" path="res://Assets/StartingStuff/HomeScreen.png" id="3_8n78m"]
[ext_resource type="Texture2D" uid="uid://7gl0jqq0jj2b" path="res://Assets/StartingStuff/Credits.png" id="3_65rv8"]
[ext_resource type="Texture2D" uid="uid://bl8pbclkmufkt" path="res://Assets/StartingStuff/Menu_Exit.png" id="5_ab7mp"]
[ext_resource type="Texture2D" uid="uid://caww4i66hpl8h" path="res://Assets/StartingStuff/DesktopBG_copy.png" id="5_bhtbg"]
[ext_resource type="Texture2D" uid="uid://dnnxa3fvqt4x0" path="res://Assets/StartingStuff/Menu_Start.png" id="5_ii03c"]
[ext_resource type="Texture2D" uid="uid://dpxbslke2vh38" path="res://Assets/StartingStuff/Blink.png" id="6_dymbg"]
[ext_resource type="Texture2D" uid="uid://kkrgvf5fqe35" path="res://Assets/StartingStuff/Menu_Exit-Black.png" id="8_vutoi"]
[ext_resource type="Texture2D" uid="uid://bfptaegetlkt4" path="res://Assets/UIs/Menu_Options.png" id="9_4v0w5"]
[ext_resource type="FontFile" uid="uid://dy7vfljitqw46" path="res://Assets/StartingStuff/Letters_Title.png" id="12_xth06"]

[sub_resource type="AtlasTexture" id="AtlasTexture_nory4"]
atlas = ExtResource("2_4hnip")
region = Rect2(0, 0, 400, 216)

[sub_resource type="AtlasTexture" id="AtlasTexture_hdngb"]
atlas = ExtResource("3_8n78m")
region = Rect2(0, 0, 400, 216)

[sub_resource type="AtlasTexture" id="AtlasTexture_453sj"]
atlas = ExtResource("3_8n78m")
region = Rect2(400, 0, 400, 216)

[sub_resource type="AtlasTexture" id="AtlasTexture_rfotd"]
atlas = ExtResource("3_8n78m")
region = Rect2(800, 0, 400, 216)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkphl"]
atlas = ExtResource("3_8n78m")
region = Rect2(1200, 0, 400, 216)

[sub_resource type="AtlasTexture" id="AtlasTexture_yb5h8"]
atlas = ExtResource("5_bhtbg")
region = Rect2(0, 0, 640, 360)

[sub_resource type="SpriteFrames" id="SpriteFrames_8wp0n"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nory4")
}],
"loop": false,
"name": &"BlackSceen",
"speed": 3.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_65rv8")
}],
"loop": false,
"name": &"Credits",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_hdngb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_453sj")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_rfotd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkphl")
}],
"loop": true,
"name": &"HomeSreen",
"speed": 8.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yb5h8")
}],
"loop": true,
"name": &"NewScreen",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_va13r"]
atlas = ExtResource("1_6p1lm")
region = Rect2(0, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_ebpfh"]
atlas = ExtResource("1_6p1lm")
region = Rect2(640, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_l1bb2"]
atlas = ExtResource("1_6p1lm")
region = Rect2(1280, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_muof6"]
atlas = ExtResource("1_6p1lm")
region = Rect2(1920, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_qvd4o"]
atlas = ExtResource("1_6p1lm")
region = Rect2(2560, 0, 640, 360)

[sub_resource type="SpriteFrames" id="SpriteFrames_m3rnf"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_va13r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ebpfh")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_l1bb2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_muof6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qvd4o")
}],
"loop": false,
"name": &"Start",
"speed": 10.0
}]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_ensup"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_wexax"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_5trii"]

[sub_resource type="AtlasTexture" id="AtlasTexture_2s4a8"]
atlas = ExtResource("2_4hnip")
region = Rect2(400, 0, 400, 216)

[sub_resource type="AtlasTexture" id="AtlasTexture_1idqe"]
atlas = ExtResource("6_dymbg")
region = Rect2(0, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_cd2rv"]
atlas = ExtResource("6_dymbg")
region = Rect2(640, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_45hq4"]
atlas = ExtResource("6_dymbg")
region = Rect2(1280, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_345fv"]
atlas = ExtResource("6_dymbg")
region = Rect2(1920, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu5fy"]
atlas = ExtResource("6_dymbg")
region = Rect2(2560, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_6kl0h"]
atlas = ExtResource("6_dymbg")
region = Rect2(3200, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_88763"]
atlas = ExtResource("6_dymbg")
region = Rect2(3200, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_f6pe5"]
atlas = ExtResource("6_dymbg")
region = Rect2(2560, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_8s4ph"]
atlas = ExtResource("6_dymbg")
region = Rect2(1920, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_8s2gn"]
atlas = ExtResource("6_dymbg")
region = Rect2(1280, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_ihsly"]
atlas = ExtResource("6_dymbg")
region = Rect2(640, 0, 640, 360)

[sub_resource type="AtlasTexture" id="AtlasTexture_yp14m"]
atlas = ExtResource("6_dymbg")
region = Rect2(0, 0, 640, 360)

[sub_resource type="SpriteFrames" id="SpriteFrames_rxk6r"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s4a8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1idqe")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_cd2rv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_45hq4")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_345fv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu5fy")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6kl0h")
}],
"loop": false,
"name": &"Blink-Close",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_88763")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_f6pe5")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8s4ph")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8s2gn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ihsly")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yp14m")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_2s4a8")
}],
"loop": false,
"name": &"Blink-Open",
"speed": 12.0
}]

[node name="TitleScreen" type="Node2D"]
script = ExtResource("1_o31ak")

[node name="ScreenAnimations" type="AnimatedSprite2D" parent="."]
position = Vector2(172, 119)
sprite_frames = SubResource("SpriteFrames_8wp0n")
animation = &"BlackSceen"
offset = Vector2(148, 29)

[node name="TitleScreenSprite" type="AnimatedSprite2D" parent="."]
position = Vector2(320, 180)
sprite_frames = SubResource("SpriteFrames_m3rnf")
animation = &"Start"
frame = 4
frame_progress = 1.0

[node name="NewTitle" type="LineEdit" parent="."]
visible = false
anchors_preset = 4
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 224.0
offset_top = 51.0
offset_right = 416.0
offset_bottom = 81.0
grow_vertical = 2
theme_override_fonts/font = ExtResource("12_xth06")
theme_override_styles/normal = SubResource("StyleBoxEmpty_ensup")
theme_override_styles/focus = SubResource("StyleBoxEmpty_wexax")
theme_override_styles/read_only = SubResource("StyleBoxEmpty_5trii")
placeholder_text = "Enter Title"
alignment = 1
max_length = 12
context_menu_enabled = false
virtual_keyboard_enabled = false
shortcut_keys_enabled = false
middle_mouse_paste_enabled = false
selecting_enabled = false
deselect_on_focus_loss_enabled = false
drag_and_drop_selection_enabled = false

[node name="ConfirmedTitle" type="Label" parent="."]
visible = false
offset_left = 224.0
offset_top = 55.0
offset_right = 416.0
offset_bottom = 78.0
theme_override_fonts/font = ExtResource("12_xth06")
horizontal_alignment = 1
vertical_alignment = 1

[node name="UIs" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 0

[node name="StartButton" type="TextureButton" parent="UIs"]
layout_mode = 0
offset_left = 200.0
offset_top = 128.0
offset_right = 264.0
offset_bottom = 192.0
focus_mode = 0
texture_normal = ExtResource("5_ii03c")

[node name="ExitButton" type="TextureButton" parent="UIs"]
layout_mode = 0
offset_left = 376.0
offset_top = 128.0
offset_right = 440.0
offset_bottom = 192.0
focus_mode = 0
texture_normal = ExtResource("5_ab7mp")
texture_hover = ExtResource("8_vutoi")

[node name="OptionButton" type="TextureButton" parent="UIs"]
layout_mode = 0
offset_left = 288.0
offset_top = 128.0
offset_right = 352.0
offset_bottom = 192.0
texture_normal = ExtResource("9_4v0w5")

[node name="Blink" type="AnimatedSprite2D" parent="."]
position = Vector2(320, 180)
sprite_frames = SubResource("SpriteFrames_rxk6r")
animation = &"Blink-Close"

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="PauseMenu" type="ColorRect" parent="CanvasLayer"]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -105.0
offset_right = 60.0
offset_bottom = 55.0
grow_horizontal = 2
grow_vertical = 2
size_flags_vertical = 4
color = Color(0.0509804, 0.584314, 1, 1)

[node name="VBoxContainer" type="VBoxContainer" parent="CanvasLayer/PauseMenu"]
layout_mode = 0
offset_top = 20.0
offset_right = 120.0
offset_bottom = 160.0

[node name="HBoxContainer" type="HBoxContainer" parent="CanvasLayer/PauseMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VolumeUp" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("12_xth06")
text = "Volume
Up"

[node name="HBoxContainer2" type="HBoxContainer" parent="CanvasLayer/PauseMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="VolumeDown" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer/HBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("12_xth06")
text = "Volume
Down"

[node name="HBoxContainer3" type="HBoxContainer" parent="CanvasLayer/PauseMenu/VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Back" type="Button" parent="CanvasLayer/PauseMenu/VBoxContainer/HBoxContainer3"]
layout_mode = 2
theme_override_fonts/font = ExtResource("12_xth06")
text = "Back"

[connection signal="animation_finished" from="TitleScreenSprite" to="." method="_on_title_screen_sprite_animation_finished"]
[connection signal="text_submitted" from="NewTitle" to="." method="_on_new_title_text_submitted"]
[connection signal="button_down" from="UIs/StartButton" to="." method="_on_start_button_button_down"]
[connection signal="button_down" from="UIs/ExitButton" to="." method="_on_exit_button_button_down"]
[connection signal="mouse_entered" from="UIs/ExitButton" to="." method="_on_exit_button_mouse_entered"]
[connection signal="pressed" from="UIs/OptionButton" to="." method="_on_option_button_pressed"]
[connection signal="animation_finished" from="Blink" to="." method="_on_blink_animation_finished"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/HBoxContainer/VolumeUp" to="." method="_on_volume_up_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/HBoxContainer2/VolumeDown" to="." method="_on_volume_down_pressed"]
[connection signal="pressed" from="CanvasLayer/PauseMenu/VBoxContainer/HBoxContainer3/Back" to="." method="_on_back_pressed"]
